# other/controllers/Author.js
@@ -25,15 +25,3 @@ module.exports.getAuthorByFullName = function getAuthorByFullName (req, res, nex
       utils.writeJson(res, response);
     });
 };
-
-
-module.exports.getAuthorsOfABook = function getAuthorsOfABook(req, res, next) {
-  const isbn = req.swagger.params['isbn'].value;
-  Author.getAuthorsOfABook(isbn)
-      .then(function (response) {
-        utils.writeJson(res, response);
-      })
-      .catch(function (response) {
-        utils.writeJson(res, response);
-      });
-};
